--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-straight/css/uicons-regular-straight.css'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-      <header class="position-relative overflow-hidden" style="height: 70vh; background: #ecfcfb;">
+      <header class="position-relative overflow-hidden" style="height: 70vh; background: #FFF4EF;">
   
     <!-- Top Bar -->
     <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
@@ -73,7 +73,7 @@
     </nav>
   
 <!-- Hero Section -->
-<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #ecfcfb !important;">
+<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #FFF4EF !important;">
   <div class="container position-relative d-flex justify-content-center align-items-center text-center" >
     <div class="row">
       <!-- Text Column -->
