--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>traveleo</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-straight/css/uicons-regular-straight.css'>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-  <header class="position-relative overflow-hidden" style="height: 100vh; background: #fff;">
+  <header class="position-relative overflow-hidden" style="height: 100vh; background: #FFF4EF;">
   
     <!-- Top Bar -->
     <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
@@ -69,7 +69,7 @@
     </nav>
   
     <!-- Hero Section -->
-    <section class="hero d-flex align-items-center position-relative" style="height:100vh;"> <!-- Adjust based on top-bar + navbar height -->
+    <section class="hero d-flex align-items-center position-relative" style="height:100vh; background-color: #FFF4EF;"> <!-- Adjust based on top-bar + navbar height -->
       
       <!-- Orbit SVG at Bottom-Right -->
       <div class="svg-div">
@@ -234,21 +234,17 @@
     <div class="marquee d-flex align-items-center">
       <div class="marquee-content">
         <span>
-          <img src="logo/1.png" alt="Logo" class="marquee-icon" />
           Travel anywhere any time, with Travelio
         </span>
         <span>
-          <img src="logo/1.png" alt="Logo" class="marquee-icon" />
-          Travel anywhere any time, with Travelio
-        </span>
-
-        <span>
-          <img src="logo/1.png" alt="Logo" class="marquee-icon" />
           Travel anywhere any time, with Travelio
         </span>
 
         <span>
-          <img src="logo/1.png" alt="Logo" class="marquee-icon" />
+          Travel anywhere any time, with Travelio
+        </span>
+
+        <span>
           Travel anywhere any time, with Travelio
         </span>
 
@@ -701,12 +697,12 @@
 
           <p>7298 The Westheimer Road, Dubai<br>United Arab Emirates</p>
           <p>+ (38) 0292 7380 9925<br>yourmailaddress@gmail.com</p>
-          <div class="social-icons mt-3">
+          <!-- <div class="social-icons mt-3">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-pinterest-p"></i></a>
-          </div>
+          </div> -->
         </div>
 
         <!-- Short Links -->
