--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav class="navbar container navbar-expand-lg bg-white px-3">
       <div class="d-flex w-100 align-items-center justify-content-between">
         <!-- Logo Left -->
-        <a class="navbar-brand d-flex align-items-center me-auto" href="#">
+        <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
           <img src="logo/1.png" alt="Tripset Logo" height="30" />
         </a>
   
