--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-      <header class="position-relative overflow-hidden" style="height: 70vh; background: #fff;">
+      <header class="position-relative overflow-hidden" style="height: 70vh; background: #FFF4EF;">
   
     <!-- Top Bar -->
     <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
@@ -56,8 +56,8 @@
             <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link " href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
-            <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link " href="services.html">Services</a></li>
+            <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Career</a></li>
           </ul>
         </div>
@@ -73,7 +73,7 @@
     </nav>
   
 <!-- Hero Section -->
-<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #fff !important;">
+<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #FFF4EF !important;">
   <div class="container position-relative d-flex justify-content-center align-items-center text-center" >
     <div class="row">
       <!-- Text Column -->
@@ -164,10 +164,77 @@
             <div class="mb-4">
               <textarea class="form-control rounded" rows="4" placeholder="Write a Message" id="message" required></textarea>
             </div>
-            <button type="submit" class="btn text-white w-100 rounded-pill fw-bold" style="background: linear-gradient(90deg, #ff661a, #ff9966);">
+            <button type="submit" class="btn text-white px-3 rounded-pill fw-bold btn-contact" style="background: #0E8281">
               Submit <i class="bi bi-arrow-right ms-2"></i>
             </button>
           </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<!-- blog -->
+
+
+<section class="blog-section section_padding_y">
+  <div class="container">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <div>
+        <p class="subtitle mb-1">Best Destination for Visit</p>
+        <h2 class="section-title display-5">Destinations Near You</h2>
+      </div>
+      <a href="#" class="btn btn-out-line-custom-solid">Read all blogs</a>
+    </div>
+
+    <div class="row g-4 mt-5">
+      <!-- Blog 1 -->
+      <div class="col-md-4">
+        <div class="blog-card">
+          <div class="mb-2">
+            <span class="tag">Travel</span>
+            <span class="tag">Booking</span>
+          </div>
+          <img src="./assets/images/t3.avif" alt="Delta" class="blog-img mb-3">
+          <div class="blog-meta mb-2">
+            <i class="bi bi-calendar3"></i> Feb 6, 2025 &nbsp; | &nbsp; 3 Mins Read
+          </div>
+          <h5 class="blog-title">Delta Gets You There We’re Ready To Fly</h5>
+          <a href="#" class="read-more mt-2 d-block">Read More</a>
+        </div>
+      </div>
+
+      <!-- Blog 2 -->
+      <div class="col-md-4">
+        <div class="blog-card">
+          <div class="mb-2">
+            <span class="tag">Travel</span>
+            <span class="tag">Booking</span>
+          </div>
+          <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" alt="Adventure" class="blog-img mb-3">
+          <div class="blog-meta mb-2">
+            <i class="bi bi-calendar3"></i> Feb 6, 2025 &nbsp; | &nbsp; 5 Mins Read
+          </div>
+          <h5 class="blog-title">Explore, Journey, Discover, Adventure</h5>
+          <a href="#" class="read-more mt-2 d-block">Read More</a>
+        </div>
+      </div>
+
+      <!-- Blog 3 -->
+      <div class="col-md-4">
+        <div class="blog-card">
+          <div class="mb-2">
+            <span class="tag">Travel</span>
+            <span class="tag">Booking</span>
+          </div>
+          <img src="https://images.unsplash.com/photo-1580519542036-c47de6196ba5" alt="Holiday" class="blog-img mb-3">
+          <div class="blog-meta mb-2">
+            <i class="bi bi-calendar3"></i> Feb 6, 2025 &nbsp; | &nbsp; 6 Mins Read
+          </div>
+          <h5 class="blog-title">Creative Holidays Create Your Kind Of Holiday</h5>
+          <a href="#" class="read-more mt-2 d-block">Read More</a>
         </div>
       </div>
     </div>
@@ -203,7 +270,7 @@
   </section>
   <!-- Newsletter Section End -->
   <!-- Footer Section Start -->
-  <footer class="footer-section text-white">
+  <footer class="footer-section text-white ">
     <div class="container py-5">
       <div class="row gy-4 justify-content-center text-start">
         <!-- Logo & Contact -->
