--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-      <header class="position-relative overflow-hidden" style="height: 70vh; background: #fff;">
+      <header class="position-relative overflow-hidden" style="height: 70vh; background: #FFF4EF;">
   
     <!-- Top Bar -->
     <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
@@ -73,7 +73,7 @@
     </nav>
   
 <!-- Hero Section -->
-<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #fff !important;">
+<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #FFF4EF !important;">
   <div class="container position-relative d-flex justify-content-center align-items-center text-center" >
     <div class="row">
       <!-- Text Column -->
