--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   
           <!-- Image Column -->
           <div class="col-lg-7 text-center position-relative mt-5 mt-lg-0" style="z-index: 2;">
-            <img src="./assets/images/banner.avif" alt="Traveler Girl" class="img-fluid hero-img" style="max-height: 650px; width: 100%; object-fit: contain;" />
+            <img src="./assets/images/banner1.png" alt="Traveler Girl" class="img-fluid hero-img" style="max-height: 850px; width: 100%; object-fit: contain;" />
   
             <!-- Optional Badge -->
             <div class="position-absolute top-0 translate-middle-x mt-3" style="left: 20%;">
