--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-      <header class="position-relative overflow-hidden" style="height: 70vh; background: #FFF4EF;">
+      <header class="position-relative overflow-hidden" style="height: 70vh; background: #fff9eb;">
   
     <!-- Top Bar -->
     <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
@@ -73,7 +73,7 @@
     </nav>
   
 <!-- Hero Section -->
-<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #FFF4EF !important;">
+<section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #fff9eb !important;">
   <div class="container position-relative d-flex justify-content-center align-items-center text-center" >
     <div class="row">
       <!-- Text Column -->
@@ -346,7 +346,7 @@
 
 <section class="testimonial-section section_padding_y">
   <div class="container text-center">
-    <p class="text-orange fw-semibold mb-2">Customer’s Feedback</p>
+    <p class="highlite-text  fw-semibold mb-2">Customer’s Feedback</p>
     <h2 class="fw-bold display-5 mb-5">What Says Our Visitors</h2>
     <div class="row g-4">
       <!-- Testimonial Card 1 -->
@@ -421,6 +421,7 @@
 </section>
 
 
+
   <!-- Newsletter Section Start -->
   <section class="newsletter-section text-center">
     <p class="newsletter-subtitle">Subscribe Newsletter</p>
@@ -433,9 +434,7 @@
             <input type="email" class="form-control" placeholder="Enter your mail address" required>
             <button type="submit" class="subscribe-btn d-flex align-items-center gap-2">
               Subscribe
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-send" viewBox="0 0 16 16">
-                <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.5 14a.5.5 0 0 1-.94.034l-2.54-6.926-6.926-2.54a.5.5 0 0 1 .034-.94l14-5.5a.5.5 0 0 1 .762.332z"/>
-              </svg>
+              <i class="fi fi-rs-paper-plane"></i>
             </button>
           </form>
 
@@ -444,6 +443,12 @@
     </div>
   </section>
   <!-- Newsletter Section End -->
+
+
+
+
+
+
   <!-- Footer Section Start -->
   <footer class="footer-section text-white">
     <div class="container py-5">
@@ -457,12 +462,12 @@
 
           <p>7298 The Westheimer Road, Dubai<br>United Arab Emirates</p>
           <p>+ (38) 0292 7380 9925<br>yourmailaddress@gmail.com</p>
-          <div class="social-icons mt-3">
+          <!-- <div class="social-icons mt-3">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-pinterest-p"></i></a>
-          </div>
+          </div> -->
         </div>
 
         <!-- Short Links -->
@@ -518,6 +523,8 @@
     </div>
   </footer>
   <!-- Footer Section End -->
+
+
 
 
 
