--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,17 @@
     <!-- Top Bar -->
     <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
       <div>
-        <i class="bi bi-envelope"></i> contactinfo@gmail.com
+        <i class="bi bi-envelope"></i> info@gotraveleo.com
         &nbsp; | &nbsp;
-        <i class="bi bi-telephone"></i> +8 (378) 389 092
+        <i class="bi bi-telephone"></i> +971 54 255 0407
       </div>
       <div class="topbar-left">
         Follow Us On:
-        <i class="bi bi-facebook right-border"></i>
-        <i class="bi bi-twitter right-border"></i>
-        <i class="bi bi-linkedin right-border"></i>
-        <i class="bi bi-instagram"></i>
+               <a class="social" href="https://www.facebook.com/profile.php?id=61571810517923"><i class="bi bi-facebook right-border"></i></a>
+        <!-- <a class="social"><i class="bi bi-twitter right-border"></i></a>
+        <a class="social"><i class="bi bi-linkedin right-border"></i></a> -->
+        <a class="social" href="https://www.instagram.com/traveleo_tourism"><i class="bi bi-instagram"></i></a>
+
       </div>
     </div>
   
@@ -58,12 +59,11 @@
             <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
             <li class="nav-item"><a class="nav-link " href="services.html">Services</a></li>
             <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Career</a></li>
           </ul>
         </div>
   
         <!-- Button Right -->
-        <button class="btn-navbar btn btn-outline-dark ms-3 d-none d-lg-block">Contact Us</button>
+        <a href="https://wa.me/971542550407" class="btn-navbar btn btn-outline-dark ms-3 d-none d-lg-block">Contact Us</a>
   
         <!-- Toggler -->
         <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
@@ -118,7 +118,7 @@
       </div>
       <div>
         <div class="text-muted small">Phone No:</div>
-        <div class="fw-bold text-orange">+123 456 789 963</div>
+        <div class="fw-bold text-orange">+971 54 255 0407</div>
       </div>
     </div>
 
@@ -129,13 +129,13 @@
       </div>
       <div>
         <div class="text-muted small">Email Address:</div>
-        <div class="fw-bold text-orange">support@example.com</div>
+        <div class="fw-bold text-orange">info@travelio.com</div>
       </div>
     </div>
   </div>
 
   <!-- Team Section -->
-  <h5 class="fw-bold mt-4 mb-3">85+ Expert Team member</h5>
+  <!-- <h5 class="fw-bold mt-4 mb-3">85+ Expert Team member</h5>
   <div class="d-flex align-items-center flex-wrap gap-2">
     <img src="https://randomuser.me/api/portraits/men/1.jpg" class="rounded-circle" width="40">
     <img src="https://randomuser.me/api/portraits/women/2.jpg" class="rounded-circle" width="40">
@@ -145,7 +145,7 @@
     <div class="rounded-circle bg-orange text-white d-flex justify-content-center align-items-center fw-bold" style="width: 40px; height: 40px;">
       +
     </div>
-  </div>
+  </div> -->
 </div>
 
       </div>
@@ -275,14 +275,16 @@
     <div class="container py-5">
       <div class="row gy-4 justify-content-center text-start">
         <!-- Logo & Contact -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-6">
           <h4 class="footer-logo d-flex align-items-center">
             <img src="logo/white.png" alt="Tripset Logo" class="me-2" style="height: 30px;">
           
           </h4>
 
-          <p>7298 The Westheimer Road, Dubai<br>United Arab Emirates</p>
-          <p>+ (38) 0292 7380 9925<br>yourmailaddress@gmail.com</p>
+          <p> Office 112, Thanvi 
+Business Center Silver home building, <br> Abu Hail, Dubai -UAE
+</p>
+          <p> +971 54 255 0407<br>info@gotraveleo.com</p>
           <!-- <div class="social-icons mt-3">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -292,51 +294,28 @@
         </div>
 
         <!-- Short Links -->
-        <div class="col-md-6 col-lg-2">
+        <div class="col-md-6 col-lg-3">
           <h5 class="footer-heading">Short Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Team Members</a></li>
-            <li><a href="#">Tour Plans</a></li>
-            <li><a href="#">Pricing Plan</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="packages.html">Packages</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
 
         <!-- Quick Links -->
-        <div class="col-md-6 col-lg-2">
+        <div class="col-md-6 col-lg-3">
           <h5 class="footer-heading">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Destination</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">FAQ Questions</a></li>
+            <li><a href="https://www.instagram.com/traveleo_tourism">Instagram</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61571810517923">Facebook</a></li>
+            <li><a href="https://www.instagram.com/traveleo_tourism">Linkedin</a></li>
+            <li><a href="https://wa.me/971542550407">WhatsApp</a></li>
           </ul>
         </div>
 
-        <!-- Instagram Post -->
-        <div class="col-md-12 col-lg-4">
-          <h5 class="footer-heading">Instagram Post</h5>
-          <div class="row g-2 mt-3">
-            <div class="col-4">
-              <img src="assets/images/l1.avif" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-4">
-              <img src="assets/images/l2.avif" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-4">
-              <img src="assets/images/l3.avif" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-4">
-              <img src="assets/images/l4.avif" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-4">
-              <img src="assets/images/s1.avif" class="img-fluid rounded" alt="">
-            </div>
-            <div class="col-4">
-              <img src="assets/images/s1.avif" class="img-fluid rounded" alt="">
-            </div>
-          </div>
-        </div>
+       
       </div>
     </div>
     <div class="footer-bottom text-center py-3 mt-4">
