--- a/packages.html
+++ b/packages.html
@@ -14,6 +14,9 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
+    <!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
     <link rel="stylesheet" href="assets/css/about.css" />
  <!-- Swiper CSS -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -43,34 +46,62 @@
       </div>
     </div>
   
-    <!-- Navbar -->
-    <nav class="navbar container navbar-expand-lg bg-white px-3">
-      <div class="d-flex w-100 align-items-center justify-content-between">
-        <!-- Logo Left -->
-        <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
-          <img src="logo/1.png" alt="Tripset Logo" height="30" />
-        </a>
-  
-        <!-- Menu Center -->
-        <div class="collapse navbar-collapse justify-content-center" id="navMenu">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link " href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link active" href="packages.html">Packages</a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-  
-        <!-- Button Right -->
-        <a href="https://wa.me/971542550407" class="btn-navbar btn btn-outline-dark ms-3 d-none d-lg-block">Contact Us</a>
-  
-        <!-- Toggler -->
-        <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
-    </nav>
+<!-- Desktop + Mobile Navbar -->
+<nav class="navbar navbar-expand-lg px-4 py-3 bg-white shadow rounded position-absolute start-50 translate-middle-x mt-3 container" style="z-index: 10;">
+  <div class="container d-flex align-items-center justify-content-between">
+
+    <!-- Logo -->
+    <a class="navbar-brand" href="index.html">
+      <img src="logo/1.png" alt="Logo" height="30" />
+    </a>
+
+    <!-- Desktop Menu (Center) -->
+    <div class="d-none d-lg-block mx-auto">
+      <ul class="navbar-nav gap-4 flex-row">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
+        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <!-- Desktop Button -->
+    <a href="https://wa.me/971542550407" class="btn btn-outline-dark d-none d-lg-block rounded-pill">Contact Us</a>
+
+    <!-- Hamburger for Mobile -->
+    <button class="navbar-toggler d-lg-none border-0" id="mobileMenuBtn">
+      <i class="fas fa-bars fa-lg"></i>
+    </button>
+  </div>
+</nav>
+
+
+<!-- ✅ Mobile Fullscreen Menu -->
+<div class="mobile-menu" id="mobileMenu">
+  <!-- Top Bar: Logo + Close Button -->
+  <div class="d-flex justify-content-between align-items-center">
+    <a class="navbar-brand" href="index.html">
+      <img src="logo/1.png" alt="Logo" height="30" />
+    </a>
+    <button class="close-menu" id="closeMenuBtn"><i class="fas fa-times"></i></button>
+  </div>
+
+  <!-- Menu Items -->
+  <div class="mt-5">
+    <a class="nav-link" href="index.html">Home <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="about.html">About <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="packages.html">Packages <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="services.html">Services <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="contact.html">Contact Us <i class="fas fa-chevron-right"></i></a>
+  </div>
+
+  <!-- CTA Button at Bottom -->
+  <div class="text-center mt-auto">
+    <a href="https://wa.me/971542550407" class="btn btn-dark w-100 py-3 rounded">Contact Us</a>
+  </div>
+</div>
+
   
 <!-- Hero Section -->
 <section class="hero d-flex align-items-center position-relative" style="height: 70vh; background: #fff9eb !important;">
@@ -609,6 +640,25 @@ Business Center Silver home building, <br> Abu Hail, Dubai -UAE
     });
   });
 </script>
+
+
+<!-- this script for mobile menu  -->
+
+
+<script>
+  const menuBtn = document.getElementById('mobileMenuBtn');
+  const closeBtn = document.getElementById('closeMenuBtn');
+  const mobileMenu = document.getElementById('mobileMenu');
+
+  menuBtn.addEventListener('click', () => {
+    mobileMenu.classList.add('active');
+  });
+
+  closeBtn.addEventListener('click', () => {
+    mobileMenu.classList.remove('active');
+  });
+</script>
+
 
 
 
