--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
 
 
+  <!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
+
  <!-- Swiper CSS -->
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
@@ -24,105 +28,124 @@
 </head>
 <body>
 
-  <header class="position-relative overflow-hidden" style="height: 100vh; background: #fff9eb;">
-  
-    <!-- Top Bar -->
-    <div class="top-bar d-none d-sm-flex container py-3 justify-content-between">
-      <div>
-        <i class="bi bi-envelope"></i> info@gotraveleo.com
-        &nbsp; | &nbsp;
-        <i  class="bi bi-telephone"></i> +971 54 255 0407
-      </div>
-      <div class="topbar-left">
-        Follow Us On:
-        <a class="social" href="https://www.facebook.com/profile.php?id=61571810517923"><i class="bi bi-facebook right-border"></i></a>
-        <!-- <a class="social"><i class="bi bi-twitter right-border"></i></a>
-        <a class="social"><i class="bi bi-linkedin right-border"></i></a> -->
-        <a class="social" href="https://www.instagram.com/traveleo_tourism"><i class="bi bi-instagram"></i></a>
-      </div>
+
+
+<header class="position-relative overflow-hidden" style="height: 100vh; background: transparent;">
+
+<!-- ✅ Top Bar (visible only on lg and up) -->
+<div class="container d-none d-lg-flex align-items-center px-4 justify-content-between position-relative" style="height: 40px; background-color: white; z-index: 10;">
+  <div class="d-flex align-items-center gap-2">
+    <i class="bi bi-envelope"></i> info@gotraveleo.com &nbsp; | &nbsp;
+    <i class="bi bi-telephone"></i> +971 54 255 0407
+  </div>
+  <div class="d-flex align-items-center gap-3">
+    Follow Us On:
+    <a class="social" href="https://www.facebook.com/profile.php?id=61571810517923"><i class="bi bi-facebook"></i></a>
+    <a class="social" href="https://www.instagram.com/traveleo_tourism"><i class="bi bi-instagram"></i></a>
+  </div>
+</div>
+
+
+<!-- Desktop + Mobile Navbar -->
+<nav class="navbar navbar-expand-lg px-4 py-3 bg-white shadow rounded position-absolute start-50 translate-middle-x mt-3 container" style="z-index: 10;">
+  <div class="container d-flex align-items-center justify-content-between">
+
+    <!-- Logo -->
+    <a class="navbar-brand" href="index.html">
+      <img src="logo/1.png" alt="Logo" height="30" />
+    </a>
+
+    <!-- Desktop Menu (Center) -->
+    <div class="d-none d-lg-block mx-auto">
+      <ul class="navbar-nav gap-4 flex-row">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
+        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+      </ul>
     </div>
-  
-    <!-- Navbar -->
-    <nav class="navbar container navbar-expand-lg bg-white px-3">
-      <div class="d-flex w-100 align-items-center justify-content-between">
-        <!-- Logo Left -->
-        <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
-          <img src="logo/1.png" alt="Tripset Logo" height="30" />
-        </a>
-  
-        <!-- Menu Center -->
-        <div class="collapse navbar-collapse justify-content-center" id="navMenu">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          </ul>
-        </div>
-  
-        <!-- Button Right -->
-        <a href="https://wa.me/971542550407" class="btn-navbar btn btn-outline-dark ms-3 d-none d-lg-block">Contact Us</a>
-  
-        <!-- Toggler -->
-        <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+
+    <!-- Desktop Button -->
+    <a href="https://wa.me/971542550407" class="btn btn-outline-dark d-none d-lg-block rounded-pill">Contact Us</a>
+
+    <!-- Hamburger for Mobile -->
+    <button class="navbar-toggler d-lg-none border-0" id="mobileMenuBtn">
+      <i class="fas fa-bars fa-lg"></i>
+    </button>
+  </div>
+</nav>
+
+
+<!-- ✅ Mobile Fullscreen Menu -->
+<div class="mobile-menu" id="mobileMenu">
+  <!-- Top Bar: Logo + Close Button -->
+  <div class="d-flex justify-content-between align-items-center">
+    <a class="navbar-brand" href="index.html">
+      <img src="logo/1.png" alt="Logo" height="30" />
+    </a>
+    <button class="close-menu" id="closeMenuBtn"><i class="fas fa-times"></i></button>
+  </div>
+
+  <!-- Menu Items -->
+  <div class="mt-5">
+    <a class="nav-link" href="index.html">Home <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="about.html">About <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="packages.html">Packages <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="services.html">Services <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="contact.html">Contact Us <i class="fas fa-chevron-right"></i></a>
+  </div>
+
+  <!-- CTA Button at Bottom -->
+  <div class="text-center mt-auto">
+    <a href="https://wa.me/971542550407" class="btn btn-dark w-100 py-3 rounded">Contact Us</a>
+  </div>
+</div>
+
+
+
+  <!-- ✅ Hero Section with Background Video -->
+  <section class="hero d-flex align-items-center position-relative" style="height: 100vh; background-color: #000;">
+    <!-- Video -->
+    <video autoplay muted loop playsinline class="position-absolute w-100 h-100 top-0 start-0" style="object-fit: cover; z-index: 0;">
+      <source src="./assets/images/banner2.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
+    <!-- Overlay -->
+    <div class="position-absolute top-0 start-0 w-100 h-100" style="background: rgba(0, 0, 0, 0.5); z-index: 1;"></div>
+
+    <!-- Hero Content -->
+<div class="container position-relative text-white" style="z-index: 2;">
+  <div class="row align-items-center min-vh-100 py-5">
+    <div class="col-lg-5 d-flex flex-column justify-content-center px-2 px-sm-3 text-center text-lg-start">
+
+      <!-- Tagline -->
+<p class="fw-semibold mb-2 mb-lg-3 fs-6">Travel Experience Offbeat</p>
+
+      <!-- Title -->
+      <h1 class="hero-main-head text-white fw-bold mb-3">Making The World Your Playground</h1>
+
+      <!-- Description -->
+      <p class="text-light fs-5 mb-4">
+        Unrivaled expertise for unique travel experiences.<br />
+        We’re here to take you there — dream travels await.
+      </p>
+
+      <!-- Buttons -->
+      <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
+        <a href="#" class="btn btn-primary btn-lg rounded-pill px-4 py-3">Let's Explore</a>
+        <a href="#packages" class="btn btn-outline-light btn-lg rounded-pill px-4 py-3">Our Packages</a>
       </div>
-    </nav>
-  
-    <!-- Hero Section -->
-    <section class="hero d-flex align-items-center position-relative" style="height:100vh; background-color: #fff9eb;"> <!-- Adjust based on top-bar + navbar height -->
-      
-      <!-- Orbit SVG at Bottom-Right -->
-      <div class="svg-div">
-        <svg width="1500" height="1500" viewBox="0 0 300 300" fill="none">
-          <circle cx="150" cy="150" r="100" stroke="#FEC84A" stroke-width="0.5" />
-          <circle cx="150" cy="150" r="70" stroke="#FEC84A" stroke-width="0.5" />
-          <circle cx="150" cy="150" r="40" stroke="#FEC84A" stroke-width="0.5" />
-          <circle cx="150" cy="50" r="2" fill="#FEC84A" />
-          <circle cx="220" cy="150" r="2" fill="#FEC84A" />
-          <circle cx="150" cy="250" r="2" fill="#FEC84A" />
-          <circle cx="80" cy="150" r="2" fill="#FEC84A" />
-        </svg>
-      </div>
-  
-      <div class="container position-relative" style="z-index: 2;">
-        <div class="row align-items-center">
-          <!-- Text Column -->
-          <div class="col-lg-5 d-flex flex-column justify-content-center">
-            <p class=" fw-semibold mb-2 highlite-text hero-para" style="color: #333 !important;">Travel Experience Offbeat</p>
-            <h1 class="hero-main-head">Making The World Your Playground</h1>
-            <p class="text-muted fs-5 hero-para">
-              Unrivaled expertise for unique travel experiences.<br />
-              We’re here to take you there — dream travels await.
-            </p>
-            <div class="d-flex button-hero-grp gap-3 mt-4">
-              <a href="#" class="btn btn-primary btn-lg rounded-pill px-4 py-3 btn-solid-hero">Let's Explore</a>
-              <a href="#packages" class="btn btn-outline-dark btn-lg rounded-pill px-4 py-3 btn-solid-hero-outline">Our Packages</a>
-            </div>
-          </div>
-  
-          <!-- Image Column -->
-          <div class="col-lg-7 text-center position-relative mt-5 mt-lg-0" style="z-index: 2;">
-            <img src="./assets/images/banner1.png" alt="Traveler Girl" class="img-fluid hero-img" style="max-height: 850px; width: 100%; object-fit: contain;" />
-  
-            <!-- Optional Badge -->
-            <div class="position-absolute top-0 translate-middle-x mt-3" style="left: 20%;">
-              <div class="bg-white rounded-4 px-4 py-3 shadow-sm text-center" style="width: 120px;">
-                <div class="mx-auto mb-2 d-flex align-items-center justify-content-center rounded-circle" style="background-color: #fff9eb; width: 48px; height: 48px;">
-                  <i class="fi fi-rs-badget-check-alt icon-badge"></i>
-                </div>
-                <div class="fw-bold text-dark fs-4 mb-0">100%</div>
-                <div class="text-muted small">Verified</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-  
-    </section>
-  </header>
+
+    </div>
+  </div>
+</div>
+
+
+  </section>
+
+</header>
 
 
 
@@ -935,6 +958,26 @@ Business Center Silver home building, <br> Abu Hail, Dubai -UAE
         },
       },
     });
+  });
+</script>
+
+
+
+
+<!-- this script for mobile menu  -->
+
+
+<script>
+  const menuBtn = document.getElementById('mobileMenuBtn');
+  const closeBtn = document.getElementById('closeMenuBtn');
+  const mobileMenu = document.getElementById('mobileMenu');
+
+  menuBtn.addEventListener('click', () => {
+    mobileMenu.classList.add('active');
+  });
+
+  closeBtn.addEventListener('click', () => {
+    mobileMenu.classList.remove('active');
   });
 </script>
 
