--- a/index.html
+++ b/index.html
@@ -152,11 +152,64 @@
 <main>
 
 
-  <section class=" about bg-white">
+
+      <!-- about  -->
+
+<section class="about-section py-5 mt-5">
+  <div class="container">
+    <div class="row align-items-center">
+<!-- Image Column -->
+<div class="col-lg-5 position-relative text-center mb-4 mb-lg-0">
+  <div class="main-img overflow-hidden mx-auto" style="width: 100%; max-width: 400px; height: 600px; border-radius: 60% / 40%;">
+    <img src="assets/images/Flyboarding.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Main Travel Image">
+  </div>
+
+ <div class="sub-img position-absolute" 
+     style="bottom: 20px; left: 70%; transform: translateX(-40%); 
+            width: 320px; height: 420px; 
+            border: 5px solid #fff; 
+            border-radius: 260px; overflow: hidden;">
+  <img src="assets/images/Kazakhstan.jpg" 
+       style="width: 100%; height: 100%; object-fit: cover;" 
+       alt="Couple Image">
+</div>
+
+</div>
+
+<div class="col-lg-1">
+
+</div>
+
+
+      <!-- Text Column -->
+      <div class="col-lg-6">
+        <span class="text-orange fw-semibold mb-2 d-block">About Us</span>
+        <h2 class="fw-bold display-5 mb-3">Trusted Travel Agency for Customized Holiday Packages</h2>
+        <p class="text-muted mb-4">Whether you're looking for family vacations, honeymoon packages, or adventure tours, we make travel planning easy, affordable, and unforgettable.</p>
+
+        <ul class="list-unstyled mb-4">
+          <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Customized Travel Packages</li>
+          <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Worldwide Destinations</li>
+          <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Expert Support & Hassle-Free Booking</li>
+        </ul>
+
+        <div class="d-flex align-items-center flex-wrap gap-3">
+          <a href="packages.html" class="btn btn-orange px-4 py-2 rounded-pill py-3">Our Packages →</a>
+          <span>Or</span>
+          <a href="https://wa.me/971542550407" class="btn btn-outline-orange px-4 py-3 rounded-pill d-flex align-items-center gap-2">
+            <i class="fi fi-sr-phone-call"></i>+971 54 255 0407
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <!-- <section class=" about bg-white">
     <div class="container">
       <div class="row align-items-center">
         
-        <!-- Left Stats -->
         <div class="col-lg-3 mb-4 mb-lg-0 left-div">
 <div class="row row-cols-2 row-cols-lg-1 g-3">
   <div class="col">
@@ -213,11 +266,9 @@
 
         </div>
   
-<!-- Center Image -->
 <div class="col-lg-3 mb-4 mb-lg-0 d-flex justify-content-center align-items-end position-relative" style="min-height: 450px;">
 
 
-  <!-- Girl Image -->
   <img src="./assets/images/about-img.png" alt="Travel Girl" class=" about-img position-relative" style="z-index: 2; max-height: 100%; object-fit: contain;">
 </div>
 
@@ -226,7 +277,6 @@
 </div>
 
   
-        <!-- Right Content -->
         <div class="col-lg-4">
           <p class=" fw-semibold mb-2 highlite-text">About Us</p>
           <h2 class="fw-bold mb-3 about-text">Discover The <br> Beauty Of Nature</h2>
@@ -254,7 +304,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
+
+
+  
   
 
   <section class="marquee-section bg-white py-2 overflow-hidden">
