add career page

--- a/packages.html
+++ b/packages.html
@@ -62,6 +62,7 @@
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="career.html">Careers</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
       </ul>
     </div>
@@ -93,6 +94,7 @@
     <a class="nav-link" href="about.html">About <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="packages.html">Packages <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="services.html">Services <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="career.html">Careers <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="contact.html">Contact Us <i class="fas fa-chevron-right"></i></a>
   </div>
 
@@ -469,7 +471,7 @@
               <small class="text-muted">Traveler</small>
             </div>
           </div>
-          <p class="text-muted">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
+          <p class="text-muted testi-para">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -486,7 +488,7 @@
               <small class="text-muted">Human Resources Specialist</small>
             </div>
           </div>
-          <p class="text-muted">“I recently had the pleasure of working with Traveleo Tourism LLC for my visa change from UAE to Oman, and I can't express how grateful I am for their exceptional service! ”</p>
+          <p class="text-muted testi-para">“I recently had the pleasure of working with Traveleo Tourism LLC for my visa change from UAE to Oman, and I can't express how grateful I am for their exceptional service! ”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -503,7 +505,7 @@
               <small class="text-muted">Traveler</small>
             </div>
           </div>
-          <p class="text-muted">“I recently used Traveleo Tourism LLC for my UAE visit visa renewal, and I couldn't be happier with the experience! The entire process was smooth and hassle-free, with every detail well-coordinated from start to finish.”</p>
+          <p class="text-muted testi-para">“I recently used Traveleo Tourism LLC for my UAE visit visa renewal, and I couldn't be happier with the experience! The entire process was smooth and hassle-free, with every detail well-coordinated from start to finish.”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -520,7 +522,7 @@
               <small class="text-muted">Business Traveler</small>
             </div>
           </div>
-          <p class="text-muted">“I purchased visa and ticket services for my family’s visit to the UAE from Traveleo Tourism LLC, Dubai, and I’m extremely satisfied. The process was smooth, transactions were handled professionally, and I felt completely comfortable dealing with them. Thank you, Traveleo, for your excellent service.!”</p>
+          <p class="text-muted testi-para">“I purchased visa and ticket services for my family’s visit to the UAE from Traveleo Tourism LLC, Dubai, and I’m extremely satisfied. The process was smooth, transactions were handled professionally, and I felt completely comfortable dealing with them. Thank you, Traveleo, for your excellent service.!”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
