--- a/career.html
+++ b/career.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About</title>
+  <title>career</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
       <div>
         <i class="bi bi-envelope"></i> info@gotraveleo.com
         &nbsp; | &nbsp;
-        <i class="bi bi-telephone"></i>+971 54 255 0407
+        <i class="bi bi-telephone"></i> +971 54 255 0407
       </div>
       <div class="topbar-left">
         Follow Us On:
@@ -62,8 +62,7 @@
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="career.html">Careers</a></li>
-
+        <li class="nav-item"><a class="nav-link" href="career.html">Careers</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
       </ul>
     </div>
@@ -112,11 +111,12 @@
     <div class="row">
       <!-- Text Column -->
       <div class="col-lg-12">
-        <h1 class="hero-main-head">Discover World With Us</h1>
-        <p class="text-muted fs-5 hero-para">
-          Make it easier for everyone to experience the world. Our mission is to create<br />
-          memories that last a lifetime for every traveler who chooses us.
-        </p>
+          <h1 class="hero-main-head">Join Our Journey</h1>
+          <p class="text-muted fs-5 hero-para">
+            At traveleo, we’re not just creating trips — we’re building unforgettable experiences. <br />
+            Be part of a passionate team shaping the future of travel.
+          </p>
+
       </div>
     </div>
   </div>
@@ -129,292 +129,82 @@
 
   <main>
 
-    <!-- about  -->
 
-<section class="about-section py-5">
-  <div class="container">
-    <div class="row align-items-center">
-<!-- Image Column -->
-<div class="col-lg-5 position-relative text-center mb-4 mb-lg-0">
-  <div class="main-img overflow-hidden mx-auto" style="width: 100%; max-width: 400px; height: 600px; border-radius: 60% / 40%;">
-    <img src="assets/images/Jetski.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Main Travel Image">
-  </div>
-
- <div class="sub-img position-absolute" 
-     style="bottom: 20px; left: 70%; transform: translateX(-40%); 
-            width: 320px; height: 420px; 
-            border: 5px solid #fff; 
-            border-radius: 260px; overflow: hidden;">
-  <img src="assets/images/Kazakhstan.jpg" 
-       style="width: 100%; height: 100%; object-fit: cover;" 
-       alt="Couple Image">
-</div>
-
-</div>
-
-<div class="col-lg-1">
-
-</div>
+  <!-- openings -->
 
 
-      <!-- Text Column -->
-      <div class="col-lg-6">
-        <span class="text-orange fw-semibold mb-2 d-block">About Us</span>
-        <h2 class="fw-bold display-5 mb-3">Trusted Travel Agency for Customized Holiday Packages</h2>
-        <p class="text-muted mb-4">Whether you're looking for family vacations, honeymoon packages, or adventure tours, we make travel planning easy, affordable, and unforgettable.</p>
+<section class="career-section section_padding_y" style=" padding: 150px 0;">
+  <div class="container text-center">
+    <p class="highlite-text fw-semibold mb-2">We're Hiring</p>
+    <h2 class="fw-bold display-5 mb-5">Explore Career Opportunities</h2>
 
-        <ul class="list-unstyled mb-4">
-          <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Customized Travel Packages</li>
-          <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Worldwide Destinations</li>
-          <li class="mb-2"><span class="text-orange me-2" style="color: #0E8281;"><i class="fi fi-sc-sparkles"></i></span> Expert Support & Hassle-Free Booking</li>
+<div class="row g-4 justify-content-center">
+
+  <!-- Job Card 1 -->
+  <div class="col-md-4">
+      <div class="card p-4 shadow-sm border rounded-4 h-100 text-start" style="border-top: 3px solid #f8f9fa;">
+        <h4 class="fw-bold mb-2 text-muted">Office Staff</h4>
+        <p class="text-muted mb-3">Plan customized itineraries, assist with travel bookings, and guide clients through seamless travel experiences.</p>
+        <ul class="list-unstyled small mb-3">
+          <li><strong>Experience:</strong> 2+ Years</li>
+          <li><strong>Location:</strong> Kochi, India</li>
+          <li><strong>Qualification:</strong> Bachelor's in Tourism or related field</li>
         </ul>
-
-        <div class="d-flex align-items-center flex-wrap gap-3">
-          <a href="packages.html" class="btn btn-orange px-4 py-2 rounded-pill py-3">Our Packages →</a>
-          <span>Or</span>
-          <a href="https://wa.me/971542550407" class="btn btn-outline-orange px-4 py-3 rounded-pill d-flex align-items-center gap-2">
-            <i class="fi fi-sr-phone-call"></i>+971 54 255 0407
-          </a>
+        <div class="text-start">
+          <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Apply Now</a>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-
-
-<!-- banner  -->
-
-<section class="position-relative">
-  <!-- Banner -->
-  <div class="container">
-    <div class="position-relative overflow-hidden rounded-4" style="height: 500px;">
-      <img src="assets/images/Desertsafari.jpg"
-           class="w-100 h-100 object-fit-cover rounded-4"
-           alt="Hero Background">
-
-      <!-- Callout Box -->
-      <!-- <div class="position-absolute top-50 start-0 translate-middle-y bg-light px-5 py-4 shadow rounded-end-4"
-           style="max-width: 350px;">
-        <h2 class="fw-bold text-dark mb-4">Explore The<br>World With Us!</h2>
-        <button class="btn btn-light border-0 p-0">
-          <div class="d-flex justify-content-center align-items-center rounded-circle bg-white shadow"
-               style="width: 60px; height: 60px; border: 3px solid #ff7e5f;">
-            <i class="bi bi-play-fill fs-3 text-danger"></i>
-          </div>
-        </button>
-      </div> -->
-    </div>
   </div>
 
-  <!-- Replaced Stat Boxes Under the Image -->
-<!-- Replaced Stat Boxes Under the Image -->
-<div class="container mt-4">
-  <div class="row row-cols-2 row-cols-md-4 g-3">
-    <div class="col">
-      <div class="d-flex align-items-center border p-3 rounded bg-white shadow-sm h-100">
-        <div class="text-warning fs-3 me-3 icon-div">
-          <i class="fi fi-ss-plane-departure icon-clor"></i>
-        </div>
-        <div>
-          <h5 class="mb-0 fw-bold">10+</h5>
-          <small class="text-muted">Tours Packs</small>
-        </div>
-      </div>
-    </div>
 
-    <div class="col">
-      <div class="d-flex align-items-center border p-3 rounded bg-white shadow-sm h-100">
-        <div class="text-warning fs-3 me-3 icon-div">
-          <i class="bi bi-map icon-clor"></i>
-        </div>
-        <div>
-          <h5 class="mb-0 fw-bold">08+</h5>
-          <small class="text-muted">Tour Destination</small>
-        </div>
-      </div>
-    </div>
+    <!-- Job Card 2 -->
+  <div class="col-md-4">
 
-    <div class="col">
-      <div class="d-flex align-items-center border p-3 rounded bg-white shadow-sm h-100">
-        <div class="text-warning fs-3 me-3 icon-div">
-          <i class="bi bi-compass icon-clor"></i>
-        </div>
-        <div>
-          <h5 class="mb-0 fw-bold">18+</h5>
-          <small class="text-muted">Premium Properties</small>
-        </div>
-      </div>
-    </div>
 
-    <div class="col">
-      <div class="d-flex align-items-center border p-3 rounded bg-white shadow-sm h-100">
-        <div class="text-warning fs-3 me-3 icon-div">
-          <i class="bi bi-sun icon-clor"></i>
-        </div>
-        <div>
-          <h5 class="mb-0 fw-bold">10+</h5>
-          <small class="text-muted">Activities</small>
+      <div class="card p-4 shadow-sm border rounded-4 h-100 text-start" style="border-top: 3px solid #f8f9fa;">
+        <h4 class="fw-bold mb-2 text-muted">Office Staff</h4>
+        <p class="text-muted mb-3">Plan customized itineraries, assist with travel bookings, and guide clients through seamless travel experiences.</p>
+        <ul class="list-unstyled small mb-3">
+          <li><strong>Experience:</strong> 2+ Years</li>
+          <li><strong>Location:</strong> Kochi, India</li>
+          <li><strong>Qualification:</strong> Bachelor's in Tourism or related field</li>
+        </ul>
+        <div class="text-start">
+          <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Apply Now</a>
         </div>
       </div>
-    </div>
+
   </div>
+
+    <!-- Job Card 2 -->
+  <div class="col-md-4">
+
+
+      <div class="card p-4 shadow-sm border rounded-4 h-100 text-start" style="border-top: 3px solid #f8f9fa;">
+        <h4 class="fw-bold mb-2 text-muted">Office Staff</h4>
+        <p class="text-muted mb-3">Plan customized itineraries, assist with travel bookings, and guide clients through seamless travel experiences.</p>
+        <ul class="list-unstyled small mb-3">
+          <li><strong>Experience:</strong> 2+ Years</li>
+          <li><strong>Location:</strong> Kochi, India</li>
+          <li><strong>Qualification:</strong> Bachelor's in Tourism or related field</li>
+        </ul>
+        <div class="text-start">
+          <a href="#" class="btn btn-primary border-0" style="background-color: #0E8281 !important;">Apply Now</a>
+        </div>
+      </div>
+
+  </div>
+
+
+
+
 </div>
 
-</section>
 
 
-<!-- swiper -->
-
-<section class="section_padding_y most-visited-locations bg-white">
-  <div class="container position-relative">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <div>
-        <p class="highlite-text fw-semibold">Handpicked activities and tours.</p>
-        <h2 class="fw-bold display-5">Must-Try Experiences</h2>
-      </div>
-      <div class="d-flex gap-3">
-        <button class="btn swiper-prev swiper-btn-color"><i class="bi bi-chevron-left"></i></button>
-        <button class="btn swiper-next swiper-btn-color-r"><i class="bi bi-chevron-right"></i></button>
-      </div>
-    </div>
-
-    <!-- Swiper -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-
-
-                <!-- Duplicate Cards for Demo -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/parasailing.jpg" class="card-img-top" alt="France">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">Parasailing </h5>
-                <small class="text-muted">Water Activities</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card 1 -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/dubai_city.jpg" class="card-img-top" alt="Netherlands">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">City Tour</h5>
-                <small class="text-muted">Dubai Activities
-</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Duplicate Cards for Demo -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/Desertsafari.jpg" class="card-img-top" alt="France">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">Desert Safari</h5>
-                <small class="text-muted">Dubai Activities
-</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-                 <!-- Duplicate Cards for Demo -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/Jetski.jpg" class="card-img-top" alt="France">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">Jet Ski</h5>
-                <small class="text-muted">Water Activities</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        
-        <!-- Duplicate Cards for Demo -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/Flyboarding.jpg" class="card-img-top" alt="France">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">Flyboarding </h5>
-                <small class="text-muted">Water Activities</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Duplicate Cards for Demo -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/dhow.jpg" class="card-img-top" alt="France">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">Dhow Cruise</h5>
-                <small class="text-muted">Dubai Activities
-</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-
-
-
-        <!-- Duplicate Cards for Demo -->
-        <div class="swiper-slide">
-          <div class="card custom-card border-0 position-relative">
-            <img src="./assets/images/boat.jpg" class="card-img-top" alt="France">
-            <div class="card-label bg-white shadow-sm d-flex justify-content-between align-items-center p-3 rounded-4 position-absolute bottom-0 start-0 end-0 m-3">
-              <div>
-                <h5 class="fw-bold mb-0">Banana Boat</h5>
-                <small class="text-muted">Water Activities</small>
-              </div>
-              <a href="#" class="btn btn-orange-gradient btn-sm rounded-circle d-flex align-items-center justify-content-center">
-                <i class="bi bi-arrow-right text-white"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-
-       
-
-        <!-- Add more cards -->
-
-      </div>
-    </div>
-
-    <div class="text-center mt-4">
-
-      <a href="https://wa.me/971542550407" class="btn btn-out-line-custom mt-5">Discover More Activities</a>
-    </div>
   </div>
 </section>
+
 
 
 <!-- testimonial -->
@@ -435,7 +225,7 @@
               <small class="text-muted">Traveler</small>
             </div>
           </div>
-          <p class="text-muted testi-para">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
+          <p class="text-muted">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
@@ -496,8 +286,6 @@
   </div>
 </section>
 
-
-
   <!-- Newsletter Section Start -->
   <section class="newsletter-section text-center">
     <p class="newsletter-subtitle">Subscribe Newsletter</p>
@@ -521,10 +309,7 @@
   <!-- Newsletter Section End -->
 
 
-
-
-
-
+  
   <!-- Footer Section Start -->
   <footer class="footer-section text-white">
     <div class="container py-5">
@@ -580,13 +365,15 @@ Business Center Silver home building, <br> Abu Hail, Dubai -UAE
   <!-- Footer Section End -->
 
 
-
-
-
   </main>
 
+ 
 
-  <script>
+
+ 
+
+  
+<script>
   document.addEventListener("DOMContentLoaded", function () {
     const swiper = new Swiper(".mySwiper", {
       slidesPerView: "auto",
@@ -609,7 +396,6 @@ Business Center Silver home building, <br> Abu Hail, Dubai -UAE
     });
   });
 </script>
-
 
 
 <!-- this script for mobile menu  -->
@@ -635,6 +421,8 @@ Business Center Silver home building, <br> Abu Hail, Dubai -UAE
 
 <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+
 
 
 
