--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                <li class="nav-item"><a class="nav-link" href="career.html">Careers</a></li>
+
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
       </ul>
     </div>
@@ -92,7 +94,8 @@
     <a class="nav-link" href="index.html">Home <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="about.html">About <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="packages.html">Packages <i class="fas fa-chevron-right"></i></a>
-    <a class="nav-link" href="services.html">Services <i class="fas fa-chevron-right"></i></a>
+      <a class="nav-link" href="services.html">Services <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="career.html">Careers <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="contact.html">Contact Us <i class="fas fa-chevron-right"></i></a>
   </div>
 
@@ -777,7 +780,7 @@
               <small class="text-muted">Traveler</small>
             </div>
           </div>
-          <p class="text-muted">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
+          <p class="text-muted testi-para">“My friend used Traveleo for the Saudi Arabia visa process, and everything went super smooth. They gave clear info at every step and kept us updated throughout. Even the Iqama procedure was done in just a couple of days. Really great service and easy to deal with!”</p>
           <div class="text-end text-warning fs-5">
             ★★★★★
           </div>
