--- a/services.html
+++ b/services.html
@@ -62,6 +62,7 @@
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="packages.html">Packages</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="career.html">Careers</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
       </ul>
     </div>
@@ -93,6 +94,7 @@
     <a class="nav-link" href="about.html">About <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="packages.html">Packages <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="services.html">Services <i class="fas fa-chevron-right"></i></a>
+    <a class="nav-link" href="career.html">Careers <i class="fas fa-chevron-right"></i></a>
     <a class="nav-link" href="contact.html">Contact Us <i class="fas fa-chevron-right"></i></a>
   </div>
 
